send channel name from front
